avoid trailing comments, explicitely convert string to int